--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,22 +54,22 @@
 	.wrap-15-30{padding-top:15px !important;padding-bottom:30px !important;overflow:hidden;}
 	.wrap-30{padding-top:30px !important;padding-bottom:30px !important;overflow:hidden;}
 	.wrap-30-bottom{padding-bottom:30px !important;overflow:hidden;}
-	.wrap-30-top{padding-top:30px;overflow:hidden;}
+	.wrap-30-top{padding-top:30px !important;overflow:hidden;}
 	.wrap-30-60{padding-top:30px !important;padding-bottom:60px !important;overflow:hidden;}
-	.wrap-30-120{padding-top:30px;padding-bottom:120px;overflow:hidden;}
+	.wrap-30-120{padding-top:30px !important;padding-bottom:120px !important;overflow:hidden;}
 	.wrap-60{padding-top:60px !important;padding-bottom:60px !important;overflow:hidden;}
-	.wrap-60-top{padding-top:60px;overflow:hidden;}
-	.wrap-60-bottom{padding-bottom:60px;overflow:hidden;}
-	.wrap-60-30{padding-top:60px;padding-bottom:30px;overflow:hidden;}
-	.wrap-60-120{padding-top:60px;padding-bottom:120px;overflow:hidden;}
-	.wrap-120{padding-top:120px;padding-bottom:120px;overflow:hidden;}
-	.wrap-120-top{padding-top:120px;overflow:hidden;}
-	.wrap-120-bottom{padding-bottom:120px;overflow:hidden;}
-	.wrap-120-30{padding-top:120px;padding-top:30px;overflow:hidden;}
-	.wrap-120-60{padding-top:120px;padding-top:60px;overflow:hidden;}
-	.wrap-240{padding-top:240px;padding-bottom:240px;overflow:hidden;}
-        .wrap-240-top{padding-top:240px;overflow:hidden;}
-	.wrap-360{padding-top:360px;padding-bottom:360px;overflow:hidden;}
+	.wrap-60-top{padding-top:60px !important;overflow:hidden;}
+	.wrap-60-bottom{padding-bottom:60px !important;overflow:hidden;}
+	.wrap-60-30{padding-top:60px !important;padding-bottom:30px !important;overflow:hidden;}
+	.wrap-60-120{padding-top:60px !important;padding-bottom:120px !important;overflow:hidden;}
+	.wrap-120{padding-top:120px !important;padding-bottom:120px !important;overflow:hidden;}
+	.wrap-120-top{padding-top:120px !important;overflow:hidden;}
+	.wrap-120-bottom{padding-bottom:120px !important;overflow:hidden;}
+	.wrap-120-30{padding-top:120px !important;padding-top:30px !important;overflow:hidden;}
+	.wrap-120-60{padding-top:120px !important;padding-top:60px !important;overflow:hidden;}
+	.wrap-240{padding-top:240px !important;padding-bottom:240px !important;overflow:hidden;}
+        .wrap-240-top{padding-top:240px !important;overflow:hidden;}
+	.wrap-360{padding-top:360px !important;padding-bottom:360px !important;overflow:hidden;}
 
 	.col{padding:0 15px;}
         .col-30{padding:0 30px;}
@@ -194,47 +194,48 @@
 	@media all and (max-width:64em){
 		.ml-hide{display:none !important;}
 		.ml-show{display:block !important;}
-		.w-33, .w-34, .w-45, .w-55, .w-75, .ml-100{width:100%;float:none;}
-		.m-center{text-align:center;}
+		.w-33, .w-34, .w-45, .w-55, .w-75, .ml-100{width:100% !important;float:none !important;}
+		.m-center{text-align:center !important;}
 		.m-nowrap{padding-top:0 !important;padding-bottom:0 !important;}
 
 		.wrap-60{padding-top:30px !important;padding-bottom:30px !important;}
 
-                .ml-10{width:10%;}
-                .ml-20{width:20%;}
-                .ml-25{width:25%;}
-                .ml-30{width:30%;}
-                .ml-33{width:33%;} /* for thirds without gaps use 33% 34% 33% */
-                .ml-34{width:34%;}
-                .ml-40{width:40%;}
-                .ml-45{width:45%;}
-                .ml-50{width:50%;}
-                .ml-55{width:55%;}
-                .ml-60{width:60%;}
-                .ml-70{width:70%;}
-                .ml-75{width:75%;}
-                .ml-80{width:80%;}
-                .ml-90{width:90%;}
+                .ml-10{width:10% !important;}
+                .ml-20{width:20% !important;}
+                .ml-25{width:25% !important;}
+                .ml-30{width:30% !important;}
+                .ml-33{width:33% !important;} /* for thirds without gaps use 33% 34% 33% */
+                .ml-34{width:34% !important;}
+                .ml-40{width:40% !important;}
+                .ml-45{width:45% !important;}
+                .ml-50{width:50% !important;}
+                .ml-55{width:55% !important;}
+                .ml-60{width:60% !important;}
+                .ml-70{width:70% !important;}
+                .ml-75{width:75% !important;}
+                .ml-80{width:80% !important;}
+                .ml-90{width:90% !important;}
+                .ml-100{width:100% !important;}
 	}
         @media all and (max-width:43.750em){
 		.mm-hide{display:none !important;}
 		.mm-show{display:block !important;}
-                .col-30{padding:0 15px;}
+                .col-30{padding:0 15px !important;}
 
-                .mm-10{width:10%;}
-                .mm-20{width:20%;}
-                .mm-25{width:25%;}
-                .mm-30{width:30%;}
-                .mm-33{width:33%;} /* for thirds without gaps use 33% 34% 33% */
-                .mm-34{width:34%;}
-                .mm-40{width:40%;}
-                .mm-45{width:45%;}
-                .mm-50{width:50%;}
-                .mm-55{width:55%;}
-                .mm-60{width:60%;}
-                .mm-70{width:70%;}
-                .mm-75{width:75%;}
-                .mm-80{width:80%;}
-                .mm-90{width:90%;}
-                .mm-100{width:100%;}
+                .mm-10{width:10% !important;}
+                .mm-20{width:20% !important;}
+                .mm-25{width:25% !important;}
+                .mm-30{width:30% !important;}
+                .mm-33{width:33% !important;} /* for thirds without gaps use 33% 34% 33% */
+                .mm-34{width:34% !important;}
+                .mm-40{width:40% !important;}
+                .mm-45{width:45% !important;}
+                .mm-50{width:50% !important;}
+                .mm-55{width:55% !important;}
+                .mm-60{width:60% !important;}
+                .mm-70{width:70% !important;}
+                .mm-75{width:75% !important;}
+                .mm-80{width:80% !important;}
+                .mm-90{width:90% !important;}
+                .mm-100{width:100% !important;}
         }
