--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,7 +17,7 @@
     #GLOBAL-STYLES
 \*------------------------------------*/
 
-        body{font-size:100%; height:100%;}
+        body{font-size:100%; min-height:100%;margin:0;padding:0;overflow:hidden;}
 	.show{display:block;}
 	.hide{display:none;}
 	.mob-show{display:none;}
@@ -44,8 +44,8 @@
 *	#BASE-GRID
 */
 
-	.row{clear:both;overflow:hidden;}
-	.row-noover{clear:both;overflow:visible;}
+	.row{clear:both;overflow:hidden;box-sizing:border-box;}
+	.row-noover{clear:both;overflow:visible;box-sizing:border-box;}
 
 	/* Row/Col wrap padding */
 	.wrap-15{padding-top:15px !important;padding-bottom:15px !important;overflow:hidden;}
@@ -71,8 +71,8 @@
         .wrap-240-top{padding-top:240px !important;overflow:hidden;}
 	.wrap-360{padding-top:360px !important;padding-bottom:360px !important;overflow:hidden;}
 
-	.col{padding:0 15px;}
-        .col-30{padding:0 30px;}
+	.col{padding:0 15px;box-sizing:border-box;}
+        .col-30{padding:0 30px;box-sizing:border-box;}
 /*
 *	#ERRORS
 */
